Do not notify the toolbar of new opened tab

The toolbar does not need to be notified when a new tab is opened.
This notification arrives at the end of the new tab opening animation,
at which point the user might have started to interact with the toolbar.

Bug: 792959
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I2774bfba5207c1d250837522c4b8e73177943c17
Reviewed-on: https://chromium-review.googlesource.com/814556
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Reviewed-by: Mark Cogan <marq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#522751}