ios/chrome/browser/ui/browser_view_controller.mm
@@ -1749,7 +1749,7 @@ applicationCommandEndpoint:(id<ApplicationCommands>)applicationCommandEndpoint {
           // animation.
           Tab* currentTab = [_model currentTab];
           if (currentTab) {
-            [self tabSelected:currentTab];
+            [self tabSelected:currentTab notifyToolbar:NO];
           }
           startVoiceSearchIfNecessaryBlock();
 
@@ -2590,7 +2590,9 @@ bubblePresenterForFeature:(const base::Feature&)feature
 
 // Called when a tab is selected in the model. Make any required view changes.
 // The notification will not be sent when the tab is already the selected tab.
-- (void)tabSelected:(Tab*)tab {
+// |notifyToolbar| indicates whether the toolbar is notified that the tab has
+// changed.
+- (void)tabSelected:(Tab*)tab notifyToolbar:(BOOL)notifyToolbar {
   DCHECK(tab);
 
   // Ignore changes while the tab stack view is visible (or while suspended).
@@ -2598,7 +2600,7 @@ bubblePresenterForFeature:(const base::Feature&)feature
   if (!self.visible || ![_model webUsageEnabled])
     return;
 
-  [self displayTab:tab isNewSelection:YES];
+  [self displayTab:tab isNewSelection:notifyToolbar];
 
   if (_expectingForegroundTab && !self.inNewTabAnimation) {
     // Now that the new tab has been displayed, return to normal. Rather than
@@ -4913,7 +4915,7 @@ bubblePresenterForFeature:(const base::Feature&)feature
 
   [_paymentRequestManager setActiveWebState:newTab.webState];
 
-  [self tabSelected:newTab];
+  [self tabSelected:newTab notifyToolbar:YES];
 }
 
 // Observer method, tab changed.
