ios/chrome/browser/ui/browser_view_controller_unittest.mm
@@ -82,7 +82,7 @@ using web::WebStateImpl;
     Testing)<CRWNativeContentProvider, PassKitDialogProvider>
 - (void)pageLoadStarted:(NSNotification*)notification;
 - (void)pageLoadComplete:(NSNotification*)notification;
-- (void)tabSelected:(Tab*)tab;
+- (void)tabSelected:(Tab*)tab notifyToolbar:(BOOL)notifyToolbar;
 - (void)tabDeselected:(NSNotification*)notification;
 - (void)tabCountChanged:(NSNotification*)notification;
 @end
@@ -364,7 +364,7 @@ TEST_F(BrowserViewControllerTest, DISABLED_TestPageLoadComplete) {
 TEST_F(BrowserViewControllerTest, TestTabSelected) {
   id tabMock = (id)tab_;
   [[tabMock expect] wasShown];
-  [bvc_ tabSelected:tab_];
+  [bvc_ tabSelected:tab_ notifyToolbar:YES];
   EXPECT_EQ([[tab_ view] superview], static_cast<UIView*>([bvc_ contentArea]));
   EXPECT_OCMOCK_VERIFY(tabMock);
 }
@@ -376,7 +376,7 @@ TEST_F(BrowserViewControllerTest, TestTabSelectedIsNewTab) {
   id tabMock = (id)tab_;
   [tabMock onSelector:@selector(url) callBlockExpectation:block];
   [[tabMock expect] wasShown];
-  [bvc_ tabSelected:tab_];
+  [bvc_ tabSelected:tab_ notifyToolbar:YES];
   EXPECT_EQ([[tab_ view] superview], static_cast<UIView*>([bvc_ contentArea]));
   EXPECT_OCMOCK_VERIFY(tabMock);
 }
